# Lilith-Asatrian

./: Copy_of_HW2_Data_Structures.ipynb  shape_factory.cpp
Algorithms/01-12-2022/: Strassens-mult.cpp  dijkstra-algorithm.cpp
Algorithms/07-11-22/: .bubble-sort.cpp.swp  bubble-sort.cpp  insertion-sort.cpp  selection-sort.cpp
Algorithms/14-11-22/: heap-sort.cpp  shell-sort.cpp
Algorithms/15-11-22/: binary-search.cpp  linear-search.cpp
Algorithms/17-11-22/: exponential-search.cpp  interpolation-search.cpp  jump-search.cpp
Algorithms/22-11-2022/: exponential-search.cpp  ternary-search.cpp
Data-Structures/09-11-22/: queue.cpp
Database/05-04-2023/: shop-changed.sql
Databases/: psql.sql
design-patterns/: a.out  messaging.cpp  shape_factory.cpp  shape_factory_prototype.cpp
exam/: file  file.cpp
exam/c++/: bank  (+40 more)
exam/sys-programming/another_exam/cmake/: CMakeLists.txt
exam/sys-programming/another_exam/cmake/src/: add.cpp  main.cpp
new web/: index.html  my.css
numerical-analysis/: bisection  bisection-method.cpp  gauss-method.cpp  gauss-method2.cpp  interpolation  interpolation.cpp  newton-Inter  newton-Inter.cpp  newton-tangent.cpp  numerical-differentialion  numerical-differentialion.cpp  secant  secant-method.cpp  simple  simple_iteration.cpp  tangent
python/: HW2_Data_Structures.ipynb  STATES  classes.py  hello.txt  hey.py  liquid.py  main.py  my  my.cpp  my.py  my_users.csv  structure  structures.cpp  transport.py  transport.pyy  triangle.py  user.csv
vsu-telegram-bot/: 1.py  another.py  array_1.py  main.py  matrix.py  practice.py  selection.py
(+409 files in other folders)
